--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -29,8 +29,6 @@ body {
   justify-content: center;
   
   background-color: $primary-color;
-
-  overflow-x: hidden;
 }
 
 a {
