--- a/src/app/styles/pages/about/about.scss
+++ b/src/app/styles/pages/about/about.scss
@@ -7,7 +7,7 @@
 
   margin-top: 6rem;
 
-  height: 25rem;
+  height: 26rem;
 }
 
 @media (min-width: 540px) {
