--- a/src/app/styles/pages/about/components/textCard.scss
+++ b/src/app/styles/pages/about/components/textCard.scss
@@ -1,6 +1,6 @@
 .about {
   .text-card { 
-      height: 25rem;
+      height: 28rem;
       width: clamp(15rem, 95vw, 20.5rem);
 
       .text {
@@ -12,7 +12,7 @@
         padding-block: 0 0.5rem;
         padding-right: clamp(0.2rem, 0vw, 1rem);
 
-        width: clamp(16rem, 80vw, 18rem);
+        width: clamp(16rem, 84vw, 18rem);
 
         font-size: 1.0625rem;
         text-align: justify;
